# project3-freezing-strategy

./: .gitignore
project3_freezing_strategy/: dataset-metadata.json  kaggle_sync.py  kaggle_sync_config.example.json  kaggle_workflow.md  kernel-metadata.json.example  prepare.py  program.md  project3_deliverable.md  pyproject.toml  results.tsv  run_project3.py  train.py
project3_freezing_strategy/weights_dataset_src/: dataset-metadata.json
